Initial commit: working Telegram bot with NLP models v1.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 python-telegram-bot==20.7
-transformers
 torch
+transformers
 numpy
 pandas
 scikit-learn
-
+langdetect
+emoji==0.6.0
+huggingface_hub[hf_xet]
