--- a/.gitignore
+++ b/.gitignore
@@ -206,8 +206,9 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-# Data / Models
-models/
-*.pt
-*.bin
-*.h5
+# Data /
+models/*.pt
+models/*.bin
+models/*.h5
+models/*.pth
+models/*.safetensors
